Configures database with EF Core and PostgreSQL
Adds Entity Framework Core and PostgreSQL support.

Introduces EventingDbContext for managing data access.

Sets up initial database migration.

Makes location nullable and CreatedBy required in Event entity.

Adds data volume for Postgres in AppHost.

Fixes namespace issues and nullable reference issues.

--- a/EventingApp.AppHost/EventingApp.AppHost.csproj
+++ b/EventingApp.AppHost/EventingApp.AppHost.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1"/>
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1" />
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -11,13 +11,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\EventingApp.ApiService\EventingApp.ApiService.csproj"/>
-        <ProjectReference Include="..\EventingApp.Web\EventingApp.Web.csproj"/>
+        <ProjectReference Include="..\EventingApp.ApiService\EventingApp.ApiService.csproj" />
+        <ProjectReference Include="..\EventingApp.Web\EventingApp.Web.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1"/>
-        <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
