--- a/EventingApp.Web/EventingApp.Web.csproj
+++ b/EventingApp.Web/EventingApp.Web.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\EventingApp.ServiceDefaults\EventingApp.ServiceDefaults.csproj"/>
+        <ProjectReference Include="..\EventingApp.ApiService/EventingApp.ApiService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
